Test HEAD markers

--- a/class1.html
+++ b/class1.html
@@ -66,11 +66,7 @@
                 <li>Who are you?</li>
 								<li>What are your preferred gender pronouns?</li>
                 <li>What do you hope to get out of the class?</li>
-<<<<<<< HEAD
                 <li>What is your favorite restaurant in the Triangle?</li>
-=======
-                <li>Do you have a favorite local restaurant?</li>
->>>>>>> 11f9d79... Update icebreaker questions
               </ul>
               </div>
             </section>
@@ -102,15 +98,7 @@
 			<section>
 				<h3>Why JavaScript?</h3>
 				<ul>
-<<<<<<< HEAD
-<<<<<<< HEAD
-					<li>JavaScript interacts with HTML and CSS.</li>
-=======
 					<li>JavaScript interfaces with HTML and CSS.</li>
->>>>>>> Updates to class1 slides
-=======
-					<li>JavaScript interacts with HTML and CSS.</li>
->>>>>>> Further updates to the class 1 slides
 					<li>With JavaScript, you can write code once and use it everywhere. DRY (Don't Repeat Yourself).</li>
 					<li>JavaScript lets you build dynamic webpages that respond to input from users.</li>
                              <li>Animations, single page applications, and more!</li>
@@ -136,22 +124,11 @@
             </section>
             <section>
                 <h3>Let's Develop It</h3>
-<<<<<<< HEAD
-<<<<<<< HEAD
-                <p>Once you've copied that code, open index.html. It should open in a browser and run your code!</p>
-            </section>
-=======
                 <p>Once you've copied that code, open index.html. It should open in a browser and run your javascript!</p>
             </section>
             <section>
 
->>>>>>> Updates to class1 slides
             <section>
-=======
-                <p>Once you've copied that code, open index.html. It should open in a browser and run your code!</p>
-            </section>
-            <section>
->>>>>>> Further updates to the class 1 slides
                 <h3>Script Tags</h3>
                 <p>You can mix JavaScript and HTML. The script tag tells your browser the stuff inside is code, not content.</p>
                 <pre><code class="language-js">
@@ -339,28 +316,10 @@ var kittensName = 'Fluffy';
                 <p>If you want to use a quote in your string, you'll need to "escape" it with a backslash.</p>
                 <pre><code class="language-js">
 console.log('I\'d like to use an apostrophe');
-<<<<<<< HEAD
-<<<<<<< HEAD
-<<<<<<< HEAD
-// Or, just use a double quote for your string!
-console.log("I'd like to use an apostrophe");
                 </code></pre>
+                Or, just use a double quote for your string:
                 <pre><code class="language-js">
-=======
-=======
-console.log("I'd like to use an apostrophe"); // Or, just use a double quote for your string!
->>>>>>> Further updates to the class 1 slides
-=======
-// Or, just use a double quote for your string!
 console.log("I'd like to use an apostrophe");
->>>>>>> small change
-                </code></pre>
-                <pre><code class="language-js">
-<<<<<<< HEAD
-console.log("I'd like to use an apostrophe");
->>>>>>> Updates to class1 slides
-=======
->>>>>>> Further updates to the class 1 slides
 				</code></pre>
             </section>
 
