A few more updates

--- a/class1.html
+++ b/class1.html
@@ -75,6 +75,7 @@
 				<h3>Today's goals</h3>
 				<ol>
 					<li>Learn what JavaScript is and what it can do</li>
+					<li>Learn a few developer's tools like the web browser console</li>
 					<li>Learn what functions and variables are</li>
 					<li>Write our first JavaScript code and make things happen!</li>
 			</section>
@@ -83,7 +84,7 @@
 				<ul>
 					<li>Join the class Slack channel to stay up to speed both during and outside of class</li>
 					<ul>
-						<li>Our channel address: </li>
+						<li>Our channel address: see white board</li>
 					</ul>
 					<li>A text editor: If you don't have one already, use Atom</li>
 					<ul>
@@ -470,7 +471,7 @@ function logTurtleFact() {
     console.log('A turtle\'s lower shell is called a plastron.');
 }
 				</code></pre>
-				<p>Then, use it as many times as you want!</p>
+				<p>Then, call the function as many times as you want, to use it!</p>
 				<pre><code class="language-js">
 logTurtleFact();
 				</code></pre>
