--- a/class2.html
+++ b/class2.html
@@ -45,14 +45,185 @@
             </section>
             <section>
                 <h3>Today's goals</h3>
-                    <ol>
-                     <li>Learn about scope</li>
-                     <li>What are booleans?</li>
-                     <li>Comparison and logical operators!</li>
-                     <li>if / else / else if statements</li>
-                     <li>while and for loops</li>
-                     <li>Arrays!</li>
+								<ol>
+									<li>Resources that we didn't discuss on Monday</li>
+									<li>Review variables, string concatenation</li>
+									<li>Template literals</li>
+									<li>Cover functions in more depth</li>
+									<li>Meet the DOM, aka the Document Object Model</li>
+									<!-- <li>Learn about scope</li>
+									<li>What are booleans?</li>
+									<li>Comparison and logical operators!</li>
+									<li>if / else / else if statements</li>
+									<li>while and for loops</li>
+									<li>Arrays!</li> -->
+								</ol>
             </section>
+						<section>
+							<h3>Resources</h3>
+							<ul>
+								<li><a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Guide" target="_blank">JavaScript Guide</a>, from the Mozilla Developers Network.</li>
+								<li><a href="http://www.codecademy.com/tracks/javascript" target="_blank">Codecademy</a>, with interactive JavaScript lessons to help you review.</li>
+							</ul>
+						</section>
+						<section>
+							<h3>Let's Develop It</h3>
+							<ol>
+								<li>Create two variables, using whatever variable names make the most sense to you. The variables should define:</li>
+									<ul>
+										<li>A first name</li>
+										<li>A last name</li>
+									</ul>
+								<li>Combine the variables together to make a full name</li>
+								<li>Print the entire name to the console, your webpage or an alert</li>
+							</ol>
+							<p></p>
+							<p>If you need a refresher, click <a href="https://gingin77.github.io/gdi-intro-js/class1.html#/">here for Monday's slides</a></p>
+						</section>
+						<section>
+							<h3>Recap of Variables and String Concatenation Exercise</h3>
+							<pre class="language-js" id="squeeze">
+								<code class="language-js">
+	// Did your solution look similar to:
+	var first = "Ginnie"
+	var last = "Hench"
+	var fullname = first + " " + last
+	console.log(fullName)
+								</code>
+							</pre>
+						</section>
+						<section>
+							<h3>Template literals offer another way to build strings</h3>
+							<pre class="language-js" id="squeeze">
+								<code class="language-js">
+	/* Use variables for first and last */
+	var first = "Ginnie"
+	var last = "Hench"
+
+	/* Skip defining the variable fullname and simply do: */
+	console.log(`${first} ${last}`)
+								</code>
+							</pre>
+							<ul>
+								<li>Requires backticks (`string string`)</li>
+								<li>Wrap variables with curly braces, preceeded by a dollar sign</li>
+								<li>These read more like English, so nice for strings</li>
+								<li>Leaving white-space between words is easier</li>
+								<li><a href="									https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Template_literals">Check out MDN for more info on template literals</a></li>
+							</ul>
+						</section>
+
+
+						<section>
+							<h3>Functions</h3>
+							<p>A function is a named part of a program that performs a specific task (a routine).</p>
+							<br />
+							<img src="images/functions.png"/>
+							<p>Some anatomy</p>
+
+						</section>
+						<section>
+							<h3>Using Functions</h3>
+							<br />
+							<p>First, declare the function.</p>
+							<pre class="language-js">
+								<code class="language-js">
+function logTurtleFact() {
+    console.log('A turtle\'s lower shell is called a plastron.');
+}
+							</code>
+						</pre>
+							<p>Then, call the function as many times as you want, to use it!</p>
+								<pre class="language-js">
+									<code class="language-js">
+logTurtleFact();
+								</code>
+							</pre>
+						</section>
+						<section>
+							<h3>Arguments</h3>
+							<p>
+								You can give functions specific values, referred to as arguments.
+							</p>
+							<p>
+								In the code snippets below, , a, and b
+							</p>
+							<pre><code class="language-js">
+	function callKitten(kittenName){
+	    console.log('Come here, ' + kittenName + '!');
+	}
+	callKitten('Fluffy');
+	// kittenName is the parameter required by callKitten
+
+							</code></pre>
+							<pre><code class="language-js">
+	function addNumbers(a, b) {
+	    console.log(a + b);
+	}
+	// a and b are the parameters required by addNumbers
+
+	addNumbers(5,7);
+	addNumbers(9,12);
+							</code></pre>
+							<p>
+								What arguments are passed to addNumbers when the function is called in the lines above?
+							</p>
+						</section>
+						<section>
+							<h3>Arguments</h3>
+							<p>A value (ie, "Fluffy" or the number 2) or a variable that holds a value can be passed to a function as an argument.</p>
+							<p>When an argument is passed to a function, the function can rename that argument. The variables passed to the function do not need to have the same name as the arguments.</p>
+							<pre>
+								<code class="language-js">
+	function addOne(inputNumber){
+	    var newNumber = inputNumber + 1;
+	    console.log('You now have ' + newNumber);
+	}
+
+	//Declare variables
+	var numberOfKittens = 5;
+	var numberOfPuppies = 4;
+	//Use them in functions
+	addOne(numberOfKittens);
+	addOne(numberOfPuppies);
+								</code>
+							</pre>
+						</section>
+						<section>
+							<h3>Let's Develop It</h3>
+							<p>Turn the code you wrote to output someone's full name into a function. The function should accept 2 arguments: the first name, and the last name.</p>
+							<p>Don't forget to call the function with your own name!</p>
+						</section>
+						<section>
+							<h3>Returning Values</h3>
+							<p>You can have a function give you back a value, to use later.</p>
+							<pre><code class="language-js">
+			function square(num) {
+			    return num * num;
+			    // any code here won't run!
+			}
+			console.log(square(4));   // outputs '16'.
+							</code></pre>
+							<p>A function will immediately exit on a 'return'</p>
+						</section>
+						<section>
+							<h3>Returning Values</h3>
+							<p>You can assign a variable the return value of a function!</p>
+							<pre><code class="language-js">
+			function square(num) {
+			    return num * num;
+			    // any code here won't run!
+			}
+			var mySquare = square(4);
+			console.log(mySquare); // outputs '16'.
+			var squareOfFive = square(5); // will make squareOfFive equal 25.
+							</code></pre>
+							<p>A function will immediately exit on a 'return'</p>
+						</section>
+						<section>
+							<h3>Let's Develop It</h3>
+							<p>Add a return statement to your name function. Use that function to set the value of a variable.</p>
+						</section>
             <section>
                 <h3>Review</h3>
                 <p>In this code, spot the comments, variables, operator, function, argument, and return value.</p>
@@ -67,6 +238,78 @@ var billTip  = calculateTip(billPreTip);
 var receipt  = 'Meal: ' + billPreTip + ' Tip: ' + billTip + ' Total: ' + (billPreTip + billTip);
                 </code></pre>
             </section>
+						<section>
+							<h3>DOM Background: Anatomy of a website</h3>
+							<div class = "blue"> Your Content</div>
+							<div><span class = "blue">+ HTML: </span>Structure</div>
+							<div><span class = "blue">+ CSS: </span>Presentation</div>
+							<div class = "blue">= Your Website</div>
+							<p>A website is a way to present your content to the world, using HTML and CSS to present that content &amp; make it look good.</p>
+						</section>
+
+									<section>
+						<h3>Refresher/Essential CSS Knowledge for Understanding the DOM: IDs vs. Classes</h3>
+							<div class = "left-align">
+								<span class = "yellow">ID</span> -- Should only apply to one element on a webpage. For instance, a webpage only has one footer.
+								<p>The "#" is how you tell CSS "this is an id."</p>
+							</div>
+							<div class = "left-align">
+								<span class = "yellow">Class</span> -- Lots of elements can have the same class. For instance, there can be many warnings on one webpage.
+								<p>The "." is how you tell CSS "this is a class name."</p>
+							</div>
+						</section>
+						<section>
+							<h3>The DOM Tree</h3>
+							<p>We model the nested structure of an HTML page with the DOM (Document Object Model) Tree. The browser makes a "map" of all the elements on a page.</p>
+						</section>
+						<section>
+							<h3>The DOM: Sample Code</h3>
+								<pre><code>
+&lt;!DOCTYPE html&gt;
+&lt;html&gt;
+	&lt;head&gt;
+		&lt;title&gt;Test Page&lt;/title&gt;
+		&lt;style&gt;
+				h1 {
+				 color: red;
+				}
+		&lt;/style&gt;
+	&lt;/head&gt;
+	&lt;body&gt;
+		&lt;h1&gt;My Super Awesome Page&lt;/h1&gt;
+		&lt;p&gt;Hello World!&lt;/p&gt;
+		&lt;img src="http://placebear.com/200/300" alt="bear"/&gt;
+	&lt;/body&gt;
+&lt;/html&gt;
+				</code></pre>
+						</section>
+						<section>
+							<h3>The DOM: Sample Model</h3>
+							<img src="images/dom-tree.png" alt="Simple DOM Tree"/>
+						</section>
+						<section>
+							<h3>DOM Access</h3>
+							<p>Your browser automatically builds a Document Object to store the DOM of a page. Let's tiptoe into the DOM by grabbing a single element</p>
+							<ol>
+								<!-- <li>Find the DOM node and store it in a variable</li>
+								<li>Use methods to manipulate the node</li> -->
+							</ol>
+						</section>
+						<section>
+							<h3>DOM Access: By Id</h3>
+							<p>You can find nodes by id using the method:</p>
+							<pre><code>
+document.getElementById(id);
+				</code></pre>
+							<p>To find:</p>
+							<pre><code>
+&lt;img id="bearPic" src="http://placebear.com/200/300" alt="bear"/&gt;
+				</code></pre>
+							<p>We would use:</p>
+							<pre><code>
+var imgKitten = document.getElementById('bearPic');
+				</code></pre>
+						</section>
 
             <section>
                 <h3>Scope</h3>
