--- a/class3.html
+++ b/class3.html
@@ -205,7 +205,7 @@ lizzieTheCat.eat(&#39;brown mushy stuff&#39;);</code></pre>
               </ul>
             </section>
 
-			<section>
+			<!-- <section>
 			  <h3>Review: Anatomy of a website</h3>
 			  <div class = "blue"> Your Content</div>
 			  <div><span class = "blue">+ HTML: </span>Structure</div>
@@ -281,7 +281,7 @@ document.getElementById(id);
               <pre><code>
 var imgKitten = document.getElementById('bearPic');
 			  </code></pre>
-            </section>
+            </section> -->
             <section>
               <h3>DOM Access: By Tag Name</h3>
               <p>You can find certain types of HTML elements using this method:</p>
